# gold_price_tracker

./: .gitignore  README.md  app.py  bankbazaar.html  gold_prices.db  gold_prices.db.bak  groww.html  main.py  page.html  price_checker.py  pyproject.toml  requirements.txt  run_update.py  verify_notification.py
.github/workflows/: update_prices.yaml
.streamlit/: config.toml
