[project]
name = "gold-price"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "streamlit>=1.52.2",
]
